--- a/.github/workflows/publish-desktop-ui-on-merge.yaml
+++ b/.github/workflows/publish-desktop-ui-on-merge.yaml
@@ -1,3 +1,4 @@
+# Secrets: Hanzo KMS (kms.hanzo.ai) — auth via Hanzo IAM
 ---
 name: Publish Desktop UI on PR Merge
 
@@ -56,7 +57,8 @@ jobs:
       dist_tag: ${{ needs.resolve.outputs.dist_tag }}
       ref: ${{ github.event.pull_request.merge_commit_sha }}
     secrets:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      KMS_CLIENT_ID: ${{ secrets.KMS_CLIENT_ID }}
+      KMS_CLIENT_SECRET: ${{ secrets.KMS_CLIENT_SECRET }}
 
   comment_desktop_publish:
     name: Comment Desktop Publish Summary
