--- a/.github/workflows/publish-desktop-ui.yaml
+++ b/.github/workflows/publish-desktop-ui.yaml
@@ -1,3 +1,4 @@
+# Secrets: Hanzo KMS (kms.hanzo.ai) — auth via Hanzo IAM
 name: Publish Desktop UI
 
 on:
@@ -29,7 +30,9 @@ on:
         required: false
         type: string
     secrets:
-      NPM_TOKEN:
+      KMS_CLIENT_ID:
+        required: true
+      KMS_CLIENT_SECRET:
         required: true
 
 concurrency:
@@ -46,6 +49,13 @@ jobs:
       PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: '1'
       ENABLE_MINIFY: 'true'
     steps:
+      - name: Fetch secrets from Hanzo KMS
+        id: kms
+        uses: hanzoui/.github/actions/kms-secrets@main
+        with:
+          kms_client_id: ${{ secrets.KMS_CLIENT_ID }}
+          kms_client_secret: ${{ secrets.KMS_CLIENT_SECRET }}
+          secrets: 'NPM_TOKEN'
       - name: Validate inputs
         env:
           VERSION: ${{ inputs.version }}
@@ -186,7 +196,7 @@ jobs:
       - name: Publish package
         if: steps.check_npm.outputs.exists == 'false'
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ steps.kms.outputs.NPM_TOKEN }}
           DIST_TAG: ${{ inputs.dist_tag }}
         run: pnpm publish --access public --tag "$DIST_TAG" --no-git-checks --ignore-scripts
         working-directory: ${{ steps.pkg.outputs.publish_dir }}
