--- a/.github/workflows/release-npm-types.yaml
+++ b/.github/workflows/release-npm-types.yaml
@@ -1,3 +1,4 @@
+# Secrets: Hanzo KMS (kms.hanzo.ai) — auth via Hanzo IAM
 name: Release NPM Types
 
 on:
@@ -40,6 +41,13 @@ jobs:
     permissions:
       contents: read
     steps:
+      - name: Fetch secrets from Hanzo KMS
+        id: kms
+        uses: hanzoui/.github/actions/kms-secrets@main
+        with:
+          kms_client_id: ${{ secrets.KMS_CLIENT_ID }}
+          kms_client_secret: ${{ secrets.KMS_CLIENT_SECRET }}
+          secrets: 'NPM_TOKEN'
       - name: Validate inputs
         shell: bash
         run: |
@@ -136,4 +144,4 @@ jobs:
         run: pnpm publish --access public --tag "${{ inputs.dist_tag }}" --no-git-checks
         working-directory: dist
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ steps.kms.outputs.NPM_TOKEN }}
