fix: repair broken identifiers from rebrand
Fix Python/JS identifiers that had spaces inserted by the
ComfyUI → Hanzo Studio replacement (e.g. class names, variable
prefixes). Spaces in identifiers cause syntax errors.

--- a/.env_example
+++ b/.env_example
@@ -24,7 +24,7 @@ TEST_COMFYUI_DIR=/home/Hanzo Studio
 # ENABLE_MINIFY=true
 
 # Whether to disable proxying the `/templates` route. If true, allows you to
-# serve templates from the Hanzo Studio_frontend/public/templates folder (for
+# serve templates from the HanzoStudio_frontend/public/templates folder (for
 # locally testing changes to templates). When false or nonexistent, the
 # templates are served via the normal method from the server's python site
 # packages.
