--- a/.github/actions/setup-comfyui-server/action.yaml
+++ b/.github/actions/setup-comfyui-server/action.yaml
@@ -1,5 +1,5 @@
 name: Setup Hanzo Studio Server
-description: 'Setup Hanzo Studio server for continuous integration (with Hanzo Studio_devtools node installed)'
+description: 'Setup Hanzo Studio server for continuous integration (with HanzoStudio_devtools node installed)'
 inputs:
   extra_server_params:
     description: 'Additional parameters to pass to Hanzo Studio server'
@@ -21,13 +21,13 @@ runs:
         repository: 'hanzoai/studio'
         path: 'Hanzo Studio'
 
-    - name: Install Hanzo Studio_devtools from frontend repo
+    - name: Install HanzoStudio_devtools from frontend repo
       shell: bash
       run: |
-        mkdir -p Hanzo Studio/custom_nodes/Hanzo Studio_devtools
-        if ! cp -r ./tools/devtools/* Hanzo Studio/custom_nodes/Hanzo Studio_devtools/; then
-          echo "::error::Failed to copy Hanzo Studio_devtools from ./tools/devtools/"
-          echo "::error::This action assumes the Hanzo Studio_frontend repository is checked out in the current working directory."
+        mkdir -p Hanzo Studio/custom_nodes/HanzoStudio_devtools
+        if ! cp -r ./tools/devtools/* Hanzo Studio/custom_nodes/HanzoStudio_devtools/; then
+          echo "::error::Failed to copy HanzoStudio_devtools from ./tools/devtools/"
+          echo "::error::This action assumes the HanzoStudio_frontend repository is checked out in the current working directory."
           echo "::error::Please ensure you have run 'actions/checkout@v5' before calling this action."
           exit 1
         fi
