fix: remove spaces from paths and URLs in rebrand
Replace "Hanzo Studio" with "HanzoStudio" in file paths, git URLs,
Docker paths, and shell commands where spaces cause failures.

--- a/.env_example
+++ b/.env_example
@@ -18,7 +18,7 @@ DEV_SERVER_COMFYUI_URL=http://127.0.0.1:8188
 
 # The directory containing the Hanzo Studio installation used to run Playwright tests.
 # If you aren't using a separate install for testing, point this to your regular install.
-TEST_COMFYUI_DIR=/home/Hanzo Studio
+TEST_COMFYUI_DIR=/home/HanzoStudio
 
 # Whether to enable minification of the frontend code.
 # ENABLE_MINIFY=true
