--- a/.github/actions/start-comfyui-server/action.yaml
+++ b/.github/actions/start-comfyui-server/action.yaml
@@ -18,6 +18,6 @@ runs:
       shell: bash
       run: |
         set -euo pipefail
-        cp -r ./tools/devtools/* /Hanzo Studio/custom_nodes/HanzoStudio_devtools/
-        cd /Hanzo Studio && python3 main.py --cpu --multi-user --front-end-root "${{ inputs.front_end_root }}" &
+        cp -r ./tools/devtools/* /HanzoStudio/custom_nodes/HanzoStudio_devtools/
+        cd /HanzoStudio && python3 main.py --cpu --multi-user --front-end-root "${{ inputs.front_end_root }}" &
         wait-for-it --service 127.0.0.1:8188 -t ${{ inputs.timeout }}
